# video-agents

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  README.md  main.py  pyproject.toml
.github/workflows/: docker.yml  unit-tests.yml
openspec/: config.yaml
openspec/changes/archive/2026-03-18-audio-extraction-tool/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-18-github-actions-unit-tests/: proposal.md  tasks.md
openspec/changes/archive/2026-03-19-video-clipping-tool/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-20-whisper-timestamped-transcription/: proposal.md
openspec/changes/archive/2026-03-30-audio-transcription-toon-protocol/: proposal.md
openspec/changes/archive/2026-03-30-issues-5-vad/: proposal.md
openspec/changes/archive/2026-03-31-scene-detection-broll-overlay/: tasks.md
openspec/changes/audio-ducking/: design.md  proposal.md  tasks.md
openspec/changes/audio-ducking/specs/audio-ducking/: spec.md
openspec/changes/audio-extraction-tool/: design.md  proposal.md  tasks.md
openspec/changes/audio-transcription-toon-protocol/: design.md  tasks.md
openspec/changes/audio-transcription-toon-protocol/specs/audio-transcription/: spec.md
openspec/changes/github-actions-unit-tests/: design.md  proposal.md
openspec/changes/github-actions-unit-tests/specs/ci-testing/: spec.md
openspec/changes/issues-5-vad/: design.md  tasks.md
openspec/changes/issues-5-vad/specs/video-clipping/: spec.md
openspec/changes/mix-audio-segments/: design.md  proposal.md  tasks.md
openspec/changes/scene-detection-broll-overlay/: design.md  proposal.md
openspec/changes/whisper-timestamped-transcription/: design.md  tasks.md
openspec/specs/: server-architecture.md
openspec/specs/audio-ducking/: spec.md
openspec/specs/audio-extraction/: spec.md
openspec/specs/audio-transcription/: spec.md
openspec/specs/ci-testing/: spec.md
openspec/specs/mix-audio-segments/: spec.md
openspec/specs/task-management/: spec.md
openspec/specs/video-clipping/: spec.md
src/: server.py
src/features/audio_ducking/: logic.py  models.py  tool.py
src/features/audio_extraction/: logic.py  models.py  tool.py
src/features/audio_transcription/: logic.py  models.py  tool.py
src/features/broll_overlay/: logic.py  models.py  tool.py
src/features/hello_world/: __init__.py  logic.py  models.py  tool.py
src/features/hello_world_ci/: logic.py
src/features/mix_audio_segments/: logic.py  models.py  tool.py
src/features/scene_detection/: logic.py  models.py  tool.py
src/features/video_clipping/: logic.py  models.py  tool.py  utils.py
tests/: test_audio_ducking.py  test_audio_extraction.py  test_audio_extraction_registration.py  test_audio_transcription.py  test_audio_transcription_registration.py  test_broll_overlay.py  test_hello_world_ci.py  test_jump_cut.py  test_jump_cut_integration.py  test_jump_cut_registration.py  test_mix_audio_segments.py  test_scene_detection.py  test_server.py  test_video_clipping.py  test_video_clipping_registration.py
(+10 files in other folders)
